[Sync] ModelTypeWorker should delete tracker for entity deleted on the server

The issue is that when entity is deleted, worker retains entity tracker object.
Later when entity is recreated information from old tracker object is used.

I'm changing worker to delete tracker object when it receives commit response
about deleted entity.

BUG=677792
R=maxbogue@chromium.org

Review-Url: https://codereview.chromium.org/2611123005
Cr-Commit-Position: refs/heads/master@{#442350}

Former-commit-id: a110d353ecca5d521ce7ec513e0493c98f0b37ed